--- a/src/components/CalendarStreak.css
+++ b/src/components/CalendarStreak.css
@@ -19,7 +19,7 @@ section.calendar-section {
 }
 
 .habit-streak-ul {
-	width: 200px;
+	max-width: 200px;
 	margin-left: auto;
 	margin-right: auto;
 
