--- a/src/components/HeroArea.css
+++ b/src/components/HeroArea.css
@@ -1,4 +1,13 @@
 div.hero-area {
-	padding: 50px;
+	padding: 25px;
+}
+
+h4 {
+	padding-top: 70px !important;
+}
+
+svg {
+	height: 50px !important;
+	width: 50px !important;
 }
 
