--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -2,15 +2,26 @@
   text-align: center;
 }
 
+.hero-area {
+	background: 
+	linear-gradient(
+	rgba(106,90,205,.7),
+	rgba(106,90,205,.7)), 
+	url('../images/graphs-on-laptop.jpg') no-repeat center center;
+	background-size: cover;
+	height: 100vh;
+}
+
 h1 {
-  font-size: 30px;
+  font-size: 4em;
 }
 
 body {
-  font-family: "Open Sans",
-  sans-serif;
-  color: #444;
-  line-height: 1.5;
+	font-family: "Open Sans",
+  	sans-serif;
+  	color: white;
+  	line-height: 1.5;
+  	background-color: slateBlue;
 }
 
 section {
