--- a/src/components/InfoItem.css
+++ b/src/components/InfoItem.css
@@ -1,15 +1,17 @@
 div.info-item {
-	background-color: #d3d3d3;
-	height: 100%;
+	background:
+	linear-gradient(
+	rgb(255,171,74),
+	rgb(240,110,71));
+	height: 200px;
 	margin: 20px;
 }
 
-h4 {
+.info-item h4 {
 	padding-bottom: 20px;
 }
 
-p {
-	font-size: 13px;
+.info-item p {
   	margin: 0 auto;
   	max-width: 450px;
 }
