--- a/src/components/NavLink.css
+++ b/src/components/NavLink.css
@@ -3,3 +3,10 @@ div.navlink-container {
 	padding: 0 .5%;
 	margin-right: 1%;
 }
+
+.login-button {
+	background-color: rgba(0,0,0,.5);
+	border-radius: 50px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
