--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,3 @@
-* {
-	padding:0;
-	margin:0;
-}
-
 .navbar-container {
 	position: fixed;
 	top: 10px;
@@ -12,4 +7,16 @@
  	background-color: transparent;
  	color:white;
  	text-align: right;
+}
+
+div.navbar-container a {
+	border-radius: 50px;
+	padding-left: 5px;
+	padding-right: 5px;
+	color: white;
+}
+
+
+div.navbar-container a:hover {
+	background-color: rgba(0,0,0,.5);
 }
