--- a/src/components/SignUpForm.css
+++ b/src/components/SignUpForm.css
@@ -1,3 +1,53 @@
-.sign-up-form {
-	background-color: #eb5a46;
+section.sign-up-form {
+	background-color: #6A5ACD;
+	width: 100%;
 }
+
+.sign-up-form  {
+	color:white;
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	padding: 25px 0px 50px 0px;
+}
+
+
+.sign-up-form input {
+	width: 100%;
+	border-bottom: 1px solid white;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	background-color: transparent;
+	color: white;
+}
+
+.sign-up-form input:focus {
+	outline: none;
+	border-bottom: 1px solid #28AFB0;
+}
+
+.sign-up-form button {
+	float: right;
+	background: transparent;
+	border: 1px solid white;
+	color: white;
+	padding: 5px;
+	transition: all .2s ease-in-out;
+	margin-top: 5px;
+}
+
+.sign-up-form button:hover {
+	cursor: pointer;
+	background-color: white;
+	color:#6A5ACD;
+	margin-top: 3px;
+	margin-right: 3px;
+}
+
+.form-error, .form-warning {
+	text-align: right;
+	color: red;
+}
+
