--- a/src/components/InfoItem.css
+++ b/src/components/InfoItem.css
@@ -1,8 +1,8 @@
 div.info-item {
 	background-color: #1E8081;
 	color: white;
-	min-height: 230px;
-	margin-: 15px 0px 15px 0px;
+	min-height: 240px;
+	margin: 15px 0px 15px 0px;
 	-webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
