--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,4 +1,21 @@
+body {
+	background-color: rgb(106,90,205);
+}
+
 section.login-section {
-	margin-top: 30%;
-	background-color: #d3d3d3;
+	background-color: #28AFB0;
+	width: 100%;
+}
+
+div.login-form-container {
+	background-color: #28AFB0;
+	height: 215px;
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15%;
+	padding: 15px;
+	-webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
