--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,18 +1,16 @@
 .navbar-container {
 	position: fixed;
-	top: 10px;
+	top: 15px;
 	left: 0;
-	right: 0;
+	right: 15px;
 	z-index: 10;
  	background-color: transparent;
  	color:white;
  	text-align: right;
 }
 
-div.navbar-container a {
+div.navlink-container a {
 	border-radius: 50px;
-	padding-left: 5px;
-	padding-right: 5px;
 	color: white;
 	background-color: #6A5ACD;
 	padding: 5px;
