--- a/src/components/ListedHabit.css
+++ b/src/components/ListedHabit.css
@@ -1,13 +1,15 @@
 section.listed-habit {
-	text-align: center;
+	text-align: left;
+	margin: 20px;
 }
 
-h3 {
-	padding-top: 10px;
-	padding-bottom: 10px;
+.listed-habit h3 {
+	display:inline-block;
 }
 
-p {
+.listed-habit p {
+	display: inline-block;
+	float: right;
 	font-size: 13px;
   	margin: 0 auto;
   	max-width: 450px;
