--- a/src/components/UserDashboard.css
+++ b/src/components/UserDashboard.css
@@ -1,26 +1,43 @@
-html, body {
-	height: 100%;
-	width: 100%;
+div.habits-container {
+	color: black;
 }
 
-div.container{
-	/*add reset */
-	padding:0;
-	margin:0;
-	width: 100%;
-	height: 100%;
+div.navbar-container {
+	background-color: rgba(40,175,176,.7);
+	-webkit-box-shadow: 0px 0px 12px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 12px 1px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 12px 1px rgba(0,0,0,0.75);
 }
 
-h1 {
+.logged-in-nav nav .navlink-container {
+ margin-top:0!important;
+}
+
+button.log-out-button {
+	color:white;
+	border:none;
+	padding: 3px;
+	border-radius: 50px;
+	background-color: #6A5ACD;
+	cursor: pointer;
+	transition: all .2s ease-in-out;
+}
+
+button.log-out-button:hover {
+	background-color: rgba(0,0,0,.5);
+}
+
+div.listed-habit h2 {
 	text-align: center;
+}
+
+header.username-header {
+	text-align: center;
+	margin-top: 100px;
 }
 
 li.listed-habit {
 	background-color: #bbb;
-}
-
-li.listed-habit:nth-child(odd) {
-	background-color: #d3d3d3;
 }
 
 li.listed-habit:hover {
@@ -30,8 +47,4 @@ li.listed-habit:hover {
 
 a {
 	text-decoration: none;
-}
-
-a:visited {
-	color: #444;
 }
