--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,3 +1,31 @@
+div.create-habit-button-container {
+	width: 15%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+}
+
+#create-habit-button {
+	background-color: rgb(40,175,176);
+	border: none;
+	color: rgb(106,90,205);
+	font-weight: bold;
+	height: 30px;
+	width: 100%;
+	cursor: pointer;
+	transition: all .2s ease-in-out;
+}
+
+#create-habit-button:hover {
+	background-color: rgb(106,90,205);
+	color: rgb(40,175,176);
+}
+
+div.create-habit-button-container svg {
+	height:10px;
+	width:10px;
+}
+
 a.closeLink {
 	display:inline-block;
 	float: right;
@@ -14,14 +42,36 @@ div.modal {
 }
 
 div.modal-content {
-	background-color: #d3d3d3;
+	background:
+	linear-gradient(
+	rgba(40,175,176,.3),
+	rgba(106,90,205,.3));
 	margin-top: 5%;
 	margin-left: auto;
 	margin-right: auto;
-	width: 300px;
+	min-width: 300px;
 	border-radius: 5px;
 	padding: 5px;
 	-webkit-box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
 	-moz-box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
 	box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
+}
+
+@media only screen and (max-width: 450px) {
+
+	div.modal {
+		background:
+		linear-gradient(
+		rgb(40,175,176),
+		rgb(106,90,205)); 
+	}
+
+	div.modal-content {
+		width: 100%!important;
+		margin-top: 40%!important;
+		background-color: transparent!important;
+		-webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0) !important;
+		-moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0)!important;
+		box-shadow: 0px 0px 0px 0px rgba(0,0,0,0)!important;
+	}
 }
