--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,8 @@
 .footer-container {
-	position: relative;
+	position: fixed;	
 	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index:10;
- 	background-color: #219091;
+	right:0;
+ 	background-color: transparent;
  	text-align: center;
  	width:100%;
 }
@@ -19,3 +17,4 @@
 .footer-container svg:hover {
 	color:rgba(0,0,0,.5);
 }
+
