--- a/src/components/ListedHabit.css
+++ b/src/components/ListedHabit.css
@@ -1,16 +1,24 @@
-section.listed-habit {
-	text-align: left;
-	margin: 20px;
+li.listed-habit {
+	text-align: center;
+	width: 60%;
+	margin-top: 5px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 3px;
+	background-color: #f2f2f2;
+	color: black;
+	transition: all .2s ease-in-out;
+	-webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
 
-.listed-habit h3 {
-	display:inline-block;
+li.listed-habit h3 {
+	font-size: 1.5vw;
 }
 
-.listed-habit p {
-	display: inline-block;
-	float: right;
-	font-size: 13px;
-  	margin: 0 auto;
-  	max-width: 450px;
+li.listed-habit p {
+	font-size: 1.5vw;
 }
+
+
