--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -5,7 +5,7 @@ section.login-section {
 	margin-right: auto;
 }
 
-div.login-form-outer-container {
+div.login-form-wrapper {
 	position: absolute;
 	top:0;
 	left:0;
@@ -26,10 +26,19 @@ div.login-form-container {
 	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
 
-div.footer-container {
-	position: fixed;
-	bottom:0;
-	left:0;
+@media only screen and (max-width: 500px) {
+	div.login-form-wrapper {
+		background-color: #28AFB0;	
+	}
+
+	div.login-form-container {
+		height:100%;
+		width:100%;
+		padding-top: 15vh;
+		box-shadow: none;
+	}
+
+	.login-form {
+		padding: 1vw;
+	}
 }
-
-
