--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
 	top: 0px;
 	left: 0;
 	right: 0px;
-	z-index: 10;
+	z-index: 100;
  	background-color: transparent;
  	color:white;
  	text-align: right;
@@ -14,6 +14,10 @@ div.navlink-container {
 	margin-right: 5px;
 }
 
+.logged-in-nav {
+	background-color: 
+}
+
 div.navlink-container:nth-child(2n) {
 	border-radius: 50px;
 	background-color: #6A5ACD;
@@ -21,7 +25,13 @@ div.navlink-container:nth-child(2n) {
 }
 
 div.navlink-container:nth-child(2n):hover {
-	background-color: rgba(0,0,0,.5);
+	background-color: white;
+	color: #6A5ACD;
+	cursor: pointer;
+}
+
+div.navlink-container:nth-child(2n) a:hover {
+	color:#6A5ACD;
 }
 
 div.navbar-container a {
