--- a/src/components/UserDashboard.css
+++ b/src/components/UserDashboard.css
@@ -1,50 +1,108 @@
-div.habits-container {
-	color: black;
+.pages-container {
+	height: 100%;
+	width: 100%;
+	background:
+	linear-gradient(
+	rgba(40,175,176,.3),
+	rgba(106,90,205,.3));
 }
 
-div.navbar-container {
-	background-color: rgba(40,175,176,.7);
-	-webkit-box-shadow: 0px 0px 12px 1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 12px 1px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 12px 1px rgba(0,0,0,0.75);
-}
-
-.logged-in-nav nav .navlink-container {
- margin-top:0!important;
+.logged-in-nav {
+	background:
+	linear-gradient(
+	to right,
+	rgb(40,175,176),
+	rgb(106,90,205));
+	-webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
 
 button.log-out-button {
 	color:white;
-	border:none;
-	padding: 3px;
+	background-color: rgb(40,175,176);
+	border:1px solid rgb(40,175,176);
 	border-radius: 50px;
-	background-color: #6A5ACD;
+	padding: 3px;
+	margin-right: 5px;
 	cursor: pointer;
 	transition: all .2s ease-in-out;
+	margin-bottom: 6px;
 }
 
 button.log-out-button:hover {
-	background-color: rgba(0,0,0,.5);
+	background-color: rgb(106,90,205);
+	color:rgb(40,175,176);
 }
 
-div.listed-habit h2 {
+div.delete-button-container {
+	display:inline-block;
+	float: right;
+}
+
+section.listed-habit {
+	padding:0;
+}
+
+.username-header h2 {
+	color: black;
 	text-align: center;
+	font-size: 6vw;
+	font-weight: bold;
+	font-family: 'Corben', cursive;
 }
 
 header.username-header {
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 6vh;
 }
 
-li.listed-habit {
-	background-color: #bbb;
+header.listed-habit-header {
+	line-height: 50px;
+}
+
+div.start-date-container {
+	line-height: 50px;
 }
 
 li.listed-habit:hover {
 	cursor:pointer;
-	background-color: rgba(0,0,0,.5);
+	background-color: rgba(106,90,205,.30);
+}
+
+li.listed-habit svg {
+	height:15px;
+	width:15px;
+	float: right;
+}
+
+li.listed-habit button {
+	background-color:transparent;
+	border:none;
+	cursor: pointer;
+	transition: all .2s ease-in-out;
+}
+
+li.listed-habit button:hover {
+	color:rgba(0,0,0,.5);
+}
+
+li.listed-habit:last-child {
+	margin-bottom: 50px;
 }
 
 a {
 	text-decoration: none;
+	color:black;
+	transition: all .2s ease-in-out;
+}
+
+nav a:hover {
+	color:rgba(0,0,0,.5);
+}
+
+@media only screen and (max-width: 600px) {
+	li.listed-habit {
+		width:90%;
+	}
 }
