--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,30 @@
-html, body, main {
+html , body, main {
 	height: 100%;
 	width: 100%;
+} 
+
+
+main {
+	overflow: auto;
 	margin:0;
 	padding:0;
 	box-sizing: border-box;
+	font-family: 'Nobile', sans-serif;
+  	color: white;
+  	line-height: 1.5;
+}
+
+#root {
+	min-height: 100%;
+	width: 100%;
+	background:
+	linear-gradient(
+	rgba(40,175,176,.3),
+	rgba(106,90,205,.3));
+}
+
+section {
+  padding: 20px;
 }
 
 
