--- a/src/App.css
+++ b/src/App.css
@@ -27,4 +27,10 @@ section {
   padding: 20px;
 }
 
+hr {
+	border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 
