--- a/src/components/HabitStats.css
+++ b/src/components/HabitStats.css
@@ -1,21 +1,31 @@
 .container-fluid {
 	padding:0;
-}
-
-html, body {
-	height: 100%;
+	margin: 0;
 	width: 100%;
 }
 
 div.habit-stats-container {
 	text-align: center;
+	height: 100%;
 	width: 100%;
-}
-
-section.circle-charts {
-	background-color: #d3d3d3;
+	padding-top: 50px;
+	color:black;
 }
 
 .statistics {
 	display: inline-block;
+	margin-bottom: 50px;
+}
+
+section.circle-charts {
+	padding: 50px;
+}
+
+.row {
+	margin:0;
+	width:100%;
+}
+
+div.habit-stats-container footer {
+	color: white;
 }
