--- a/src/components/LoadingSpinner.css
+++ b/src/components/LoadingSpinner.css
@@ -1,3 +1,9 @@
 div.sweet-loading {
-	padding-top: 50%;
+	padding-top: 60%;
+}
+
+@media screen and (max-width: 500px) {
+	div.sweet-loading {
+		padding-top: 250%;
+	}
 }
