--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -6,24 +6,27 @@ div.create-habit-button-container {
 }
 
 #create-habit-button {
-	background-color: rgb(40,175,176);
-	border: none;
-	color: rgb(106,90,205);
-	font-weight: bold;
+	position: fixed;
+	top:2.5px;
+	left:5px;
+	background-color: transparent;
+	border: 2px solid white;
+	color: white;
 	height: 30px;
-	width: 100%;
+	width: 80px;
 	cursor: pointer;
+	z-index: 101;
 	transition: all .2s ease-in-out;
 }
 
 #create-habit-button:hover {
-	background-color: rgb(106,90,205);
-	color: rgb(40,175,176);
+	background-color: white;
+	color: #28AFB0;
 }
 
 div.create-habit-button-container svg {
-	height:10px;
-	width:10px;
+	height:8px;
+	width:8px;
 }
 
 a.closeLink {
