--- a/src/components/NewBestStreakModal.css
+++ b/src/components/NewBestStreakModal.css
@@ -1,7 +1,26 @@
-a.closeLink {
+a#closeLink {
 	display:inline-block;
 	float: right;
 	cursor: pointer;
+	color:white;
+}
+
+a#closeLink svg{
+	height: 15px;
+	width: 15px;
+}
+
+a#closeLink:hover {
+	color: rgba(0,0,0,.5);
+}
+
+div.shared {
+	width: 150px;
+	margin: 10px auto;
+}
+
+div.shared a:hover {
+	border: 1px solid white;
 }
 
 div.modal {
@@ -15,14 +34,19 @@ div.modal {
 }
 
 div.modal-content {
-	background-color: #d3d3d3;
+	background:
+	linear-gradient(
+	rgb(40,175,176),
+	rgb(106,90,205));
 	margin-top: 5%;
 	margin-left: auto;
 	margin-right: auto;
 	width: 300px;
 	border-radius: 5px;
 	padding: 5px;
+	color: white;
 	-webkit-box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
 	-moz-box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
 	box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
 }
+
