--- a/src/components/CalendarStreak.css
+++ b/src/components/CalendarStreak.css
@@ -1,5 +1,5 @@
 div.calendar-streak {
-	max-width: 450px;
+	max-width: 500px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
@@ -7,28 +7,21 @@ div.calendar-streak {
 
 section.calendar-section {
 	text-align: center;
-	font-size: 12px;
-}
-
-section.calendar-section h3 {
 	font-size: 20px;
 }
 
-.habit-streak-ul {
-	max-width: 200px;
-	margin-left: auto;
-	margin-right: auto;
-
+section.calendar-section h3 {
+	font-size: 40px;
 }
 
 ul.habit-streak-ul li {
-	width: 6px;
-	height:6px;
+	width: 15px;
+	height:15px;
 	border-radius:5px;
 	list-style-type: none;
 	display:inline-block;
 	border: 1px solid black;
-	margin: .5px;
+	margin: 1px;
 	-webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
@@ -44,4 +37,10 @@ ul.habit-streak-ul li:hover {
 
 .red {
 	background: red;
+}
+
+@media screen and (max-width: 500px) {
+	section.calendar-section h3 {
+		font-size: 10vw;
+	}
 }
