--- a/src/components/DonutChart.css
+++ b/src/components/DonutChart.css
@@ -3,18 +3,12 @@ div.donut-chart {
 	position: relative;
 }
 
-span h3 {
-	margin:auto;
-	position: absolute;
-	top:32%;
-	left:0;
-	right:0;
-}
-
-svg {
-	height:150px
+.donut-chart svg {
+	height: 200px;
+	width: 200px;
 }
 
 .pie-chart-label  {
 	fill: white !important;
+	font-size: 20px!important;
 }
