--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -20,8 +20,8 @@
 }
 
 .hero-area h1 {
-  font-size: 8vw;
-  padding-top: 7vh;
+  font-size: 10vw;
+  padding-top: 7vw;
   font-family: 'Corben', cursive;
   font-weight: bold;
 }
