--- a/src/components/BestStreak.css
+++ b/src/components/BestStreak.css
@@ -2,15 +2,7 @@ div.best-streak {
 	position: relative;
 }
 
-span h3 {
-	margin:auto;
-	position: absolute;
-	top:32%;
-	left:0;
-	right:0;
-}
-
-svg {
-	height:150px;
-	width: 150px;
+.best-streak svg {
+	height:200px;
+	width: 200px;
 }
