--- a/src/components/LogHabit.css
+++ b/src/components/LogHabit.css
@@ -1,14 +1,16 @@
 .log-habit-button {
 	position: fixed;
-	top:2.5px;
-	left:5px;
+	top:4px;
+	left:10px;
+	padding: 5px;
 	background-color: transparent;
 	border: 2px solid white;
 	color: white;
-	height: 30px;
-	width: 80px;
+	width: 100px;
 	cursor: pointer;
 	z-index: 101;
+	font-size: 20px;
+	font-family: 'Nobile', sans-serif;
 	transition: all .2s ease-in-out;
 }
 
