--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -13,9 +13,9 @@ div.login-form-wrapper {
 }
 
 div.login-form-container {
-	height: 200px;
-	width: 300px;
-	margin-top: 100px;
+	height: 400px;
+	width: 500px;
+	margin-top: 200px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #28AFB0;
@@ -27,16 +27,22 @@ div.login-form-container {
 @media only screen and (max-width: 500px) {
 	div.login-form-wrapper {
 		background-color: #28AFB0;	
+		overflow: hidden;
+	}
+
+	section.login-section {
+		padding:0;
 	}
 
 	div.login-form-container {
-		height:100%;
-		width:100%;
-		padding-top: 15vh;
+		height: 100%;
+		width: 100%;
 		box-shadow: none;
 	}
 
 	.login-form {
-		padding: 1vw;
+		padding-top: 10vw;
+		padding-left: 5px;
+		padding-right: 5px;
 	}
 }
