--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,21 +1,16 @@
-div.create-habit-button-container {
-	width: 15%;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: left;
-}
-
 #create-habit-button {
 	position: fixed;
-	top:2.5px;
-	left:5px;
+	top:4px;
+	left:10px;
+	padding: 5px;
 	background-color: transparent;
 	border: 2px solid white;
 	color: white;
-	height: 30px;
-	width: 80px;
+	width: 100px;
 	cursor: pointer;
-	z-index: 101;
+	z-index: 100;
+	font-size: 20px;
+	font-family: 'Nobile', sans-serif;
 	transition: all .2s ease-in-out;
 }
 
@@ -25,8 +20,8 @@ div.create-habit-button-container {
 }
 
 div.create-habit-button-container svg {
-	height:8px;
-	width:8px;
+	height:10px;
+	width:10px;
 }
 
 a.closeLink {
@@ -52,7 +47,7 @@ div.modal-content {
 	margin-top: 5%;
 	margin-left: auto;
 	margin-right: auto;
-	min-width: 300px;
+	min-width: 500px;
 	border-radius: 5px;
 	padding: 5px;
 	-webkit-box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
