--- a/src/components/PercentSuccess.css
+++ b/src/components/PercentSuccess.css
@@ -8,9 +8,10 @@ span h3 {
 	top:32%;
 	left:0;
 	right:0;
+	font-size: 25px;
 }
 
-svg {
-	height:150px;
-	width: 150px;
+.percent-success svg {
+	height:200px;
+	width: 200px;
 }
