--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -40,14 +40,14 @@ div.modal {
 }
 
 div.modal-content {
+	min-width: 500px;
 	background:
 	linear-gradient(
 	rgba(40,175,176,.3),
 	rgba(106,90,205,.3));
-	margin-top: 5%;
+	margin-top: 1%;
 	margin-left: auto;
 	margin-right: auto;
-	min-width: 500px;
 	border-radius: 5px;
 	padding: 5px;
 	-webkit-box-shadow: 10px 10px 19px -5px rgba(0,0,0,0.80);
@@ -65,8 +65,7 @@ div.modal-content {
 	}
 
 	div.modal-content {
-		width: 100%!important;
-		margin-top: 40%!important;
+		min-width: 300px!important;
 		background-color: transparent!important;
 		-webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0) !important;
 		-moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0)!important;
