--- a/src/components/UserDashboard.css
+++ b/src/components/UserDashboard.css
@@ -1,3 +1,14 @@
+a {
+	text-decoration: none;
+	color:black;
+	transition: all .2s ease-in-out;
+}
+
+nav a:hover {
+	color:rgba(0,0,0,.5);
+}
+
+
 .logged-in-nav {
 	background:
 	linear-gradient(
@@ -71,14 +82,12 @@ li.listed-habit:last-child {
 	margin-bottom: 50px;
 }
 
-a {
-	text-decoration: none;
+div.no-user-habits {
+	text-align: center;
 	color:black;
-	transition: all .2s ease-in-out;
-}
-
-nav a:hover {
-	color:rgba(0,0,0,.5);
+	font-size: 20px;
+	max-width: 300px;
+	margin:100px auto;
 }
 
 @media only screen and (max-width: 600px) {
