--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ main {
 #root {
 	min-height: 100%;
 	width: 100%;
+	background:
+	linear-gradient(
+	rgba(40,175,176,.3),
+	rgba(106,90,205,.3));
 }
 
 section {
