--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ main {
   	line-height: 1.5;
 }
 
+#root {
+	width: 100%;
+	background:
+	linear-gradient(
+	rgba(40,175,176,.3),
+	rgba(106,90,205,.3));
+}
 
 section {
 	padding: 20px;
