--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html, body, main {
+/*html, body, main {
 	height: 100%;
 	width: 100%;
 } 
@@ -15,6 +15,7 @@ main {
 }
 
 #root {
+	min-height: 100%;
 	width: 100%;
 	background:
 	linear-gradient(
@@ -30,6 +31,6 @@ hr {
 	border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-}
+}*/
 
 
