--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -3,15 +3,13 @@
 }
 
 .hero-area {
-	background:
+	background: 
 	linear-gradient(
 	rgba(40,175,176,.7),
-	rgba(106,90,205,.7)), 
-	url('../images/graphs-on-laptop.jpg') no-repeat center center fixed; 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	rgba(106,90,205,.7)),
+	url('../images/graphs-on-laptop.jpg') no-repeat center center;
 	background-size: cover;
+	height: 100vh;
 }
 
 .pitch-boxes {
