--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -64,9 +64,17 @@ div.modal-content {
 		rgb(106,90,205)); 
 	}
 
+	.modalContainer {
+		height:100%;
+		width: 100%;
+		display:table;
+	}
+
 	div.modal-content {
+		display:table-cell;
+		vertical-align: middle;
 		min-width: 300px!important;
-		background-color: transparent!important;
+		background: transparent!important;
 		-webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0) !important;
 		-moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0)!important;
 		box-shadow: 0px 0px 0px 0px rgba(0,0,0,0)!important;
