--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,6 +1,8 @@
 section.login-section {
 	background-color: #28AFB0;
 	width: 100%;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 div.login-form-wrapper {
@@ -16,6 +18,7 @@ div.login-form-container {
 	height: 400px;
 	width: 500px;
 	margin-top: 200px;
+	display: table;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #28AFB0;
@@ -30,18 +33,14 @@ div.login-form-container {
 		overflow: hidden;
 	}
 
-	section.login-section {
-		padding:0;
-	}
-
 	div.login-form-container {
 		height: 100%;
 		width: 100%;
 		box-shadow: none;
+		margin:0;
 	}
 
-	.login-form {
-		padding-top: 7vw;
+	.login-section {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
